Completed first bonus mission

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
 	<script>
 		window.addEventListener("load", function () {
 			let form = document.getElementById("searchForm");
+			let searchTerm = document.getElementById("searchTerm");
 
 			form.addEventListener("submit", function () {
+				
 				// set the action in this function
 				// this selector will select an input element that has both a name attribute equalling "engine" and is also checked
 				let radioInputSelector = document.querySelector("input[name=engine]:checked");
 				let searchEngineURL = radioInputSelector.value;
-				// use setAttribute method
+				if(searchTerm.value === "") {
+					alert("Please enter some text in the search box!!!");
+					event.preventDefault();
+				}
+				// use setAttribute method to the action attribute of the form
 				form.setAttribute("action", searchEngineURL);
 			})
 		});
@@ -21,10 +27,10 @@
 <body>
 
 	<form id="searchForm">
-		<input name="q" type="text" />
+		<input name="q" type="text" id="searchTerm" />
 
 		<label>
-			<input type="radio" name="engine" value="https://www.google.com/search" />
+			<input type="radio" name="engine" value="https://www.google.com/search" checked/>
 			Google
 		</label>
 
